--- a/.env
+++ b/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST= remotemysql.com
 DB_PORT=3306
-DB_DATABASE=ouvQcmuZ5V
-DB_USERNAME=ouvQcmuZ5V 
-DB_PASSWORD=fspxm7bzqv
+DB_DATABASE=TRbZS9R7mK
+DB_USERNAME=TRbZS9R7mK
+DB_PASSWORD=N7TzGdEqAN
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
